openshift deployment from travis-ci #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,14 @@ before_script:
   - pyflakes -x W .
 script:
 - ./manage.py test core questions accounts
+deploy:
+  provider: openshift
+  user:
+    release: slaweet@seznam.cz
+    master: slaweet@gmail.com
+  app: geography
+  domain:
+    release: conqueror
+    master: geography
+  password:
+    secure: "E3QlBD9nDyY9cEqu9WXfgh+f28j64P0inxIU5sIPJEBwAqgcKiGBFEr/k5WwuFtKwGoxDWRwrm3SVbXId8FskfU7jy7zjcKvJqWzCx5SkOZ16RYezXdtxkjUeRFxZNy7U413dE3qmzqBild6zTR2FFKG7UjICfvcHYW39uoZ28c="
