--- a/wsgi/openshift/package.json
+++ b/wsgi/openshift/package.json
@@ -8,6 +8,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.7.1",
     "grunt-notify": "~0.2.17",
-    "grunt-bg-shell": "~2.3.1"
+    "grunt-bg-shell": "~2.3.1",
+    "grunt-rename": "~0.1.3"
   }
 }
