--- a/main/package.json
+++ b/main/package.json
@@ -2,13 +2,14 @@
   "name": "blind-maps",
   "version": "0.9.3",
   "devDependencies": {
-    "grunt": "~0.4.2",
+    "grunt": "~0.4.4",
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-uglify": "~0.3.2",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-sass": "~0.7.1",
     "grunt-notify": "~0.2.17",
     "grunt-bg-shell": "~2.3.1",
-    "grunt-rename": "~0.1.3"
+    "grunt-rename": "~0.1.3",
+    "grunt-newer": "~0.7.0"
   }
 }
