--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ install:
 - pip install https://github.com/dcramer/pyflakes/tarball/master
 script:
   - cd main
-  - pep8 --exclude=migrations --ignore=E501,E225 .
+  - pep8 --exclude=migrations --ignore=E501,E225,E123 .
   - pyflakes -x W .
