add forgotten prettytable module
issues: #27

--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -8,5 +8,6 @@ django-lazysignup==0.12.2
 django-social-auth==0.7.28
 httplib2==0.8
 oauth2==1.5.211
+prettytable==0.7.2
 python-openid==2.2.5
 wsgiref==0.1.2
