gitignore generated css files

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,9 @@ Geography.egg-info
 .django_cache
 .ropeproject
 node_modules
-static/css/*
 above-fold.css
+above-fold.css.map
+app.css
+app.css.map
+map.css
+map.css.map
