--- a/main/package.json
+++ b/main/package.json
@@ -10,6 +10,8 @@
     "grunt-notify": "~0.2.17",
     "grunt-bg-shell": "~2.3.1",
     "grunt-rename": "~0.1.3",
-    "grunt-newer": "~0.7.0"
+    "grunt-newer": "~0.7.0",
+    "grunt-angular-templates": "~0.5.4",
+    "grunt-contrib-concat": "~0.4.0"
   }
 }
