--- a/main/package.json
+++ b/main/package.json
@@ -12,6 +12,8 @@
     "grunt-rename": "~0.1.3",
     "grunt-newer": "~0.7.0",
     "grunt-angular-templates": "~0.5.4",
-    "grunt-contrib-concat": "~0.4.0"
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-string-replace": "~0.2.7",
+    "grunt-shell": "~0.7.0"
   }
 }
