--- a/main/package.json
+++ b/main/package.json
@@ -14,6 +14,8 @@
     "grunt-angular-templates": "~0.5.4",
     "grunt-contrib-concat": "~0.4.0",
     "grunt-string-replace": "~0.2.7",
-    "grunt-shell": "~0.7.0"
+    "grunt-shell": "~0.7.0",
+    "cheerio": "~0.15.0",
+    "node-raphael": "~0.2.0"
   }
 }
