--- a/main/package.json
+++ b/main/package.json
@@ -15,7 +15,7 @@
     "grunt-contrib-concat": "~0.4.0",
     "grunt-string-replace": "~0.2.7",
     "grunt-shell": "~0.7.0",
-    "cheerio": "~0.15.0",
-    "node-raphael": "~0.2.0"
+    "node-raphael": "~0.2.0",
+    "dom-js": "0.0.9"
   }
 }
