--- a/main/requirements.txt
+++ b/main/requirements.txt
@@ -7,6 +7,7 @@ django-ipware==0.0.8
 django-lazysignup==0.12.2
 django-social-auth==0.7.28
 django-modeltranslation==0.8b1
+django-debug-toolbar==1.1
 httplib2==0.8
 oauth2==1.5.211
 prettytable==0.7.2
