Personal goals templates: move them to proso_goals module

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ node_modules
 main/templates/generated
 main/geography/static/css
 main/geography/static/hack/tpl
+main/geography/static/hack/proso_goals
+main/geography/static/hack/geography
