--- a/geography/package.json
+++ b/geography/package.json
@@ -9,10 +9,11 @@
     "grunt-contrib-jshint": "~0.8.0",
     "grunt-contrib-sass": "~0.9.2",
     "grunt-contrib-uglify": "~0.9.1",
-    "grunt-html2js": "~0.3.2"
+    "grunt-html2js": "~0.3.2",
     "grunt-shell": "~1.1.2",
     "grunt-string-replace": "~1.2.0",
     "node-raphael": "~0.2.0",
+    "grunt-contrib-copy": "~0.8.0"
   },
   "license": "MIT"
 }
