--- a/geography/package.json
+++ b/geography/package.json
@@ -13,7 +13,9 @@
     "grunt-shell": "~1.1.2",
     "grunt-string-replace": "~1.2.0",
     "node-raphael": "~0.2.0",
-    "grunt-contrib-copy": "~0.8.0"
+    "grunt-contrib-copy": "~0.8.0",
+    "sass": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1"
   },
   "license": "MIT"
 }
