--- a/geography/bower.json
+++ b/geography/bower.json
@@ -9,7 +9,8 @@
     "angular-xeditable": "~0.1.9",
     "chroma-js": "~0.6.1",
     "kartograph.js": "~0.8.2",
-    "angular-google-experiments": "~0.0.1"
+    "angular-google-experiments": "~0.0.1",
+    "bootstrap": "~3.3.4"
   },
   "resolutions": {
     "angular": "~1.3.15"
