--- a/geography/bower.json
+++ b/geography/bower.json
@@ -10,7 +10,10 @@
     "chroma-js": "~0.6.1",
     "kartograph.js": "~0.8.2",
     "angular-google-experiments": "~0.0.1",
-    "bootstrap": "~3.3.4"
+    "bootstrap": "~3.3.4",
+    "raphael": "~2.1.4",
+    "raphael-pan-zoom": "git@github.com:escobar5/raphael-pan-zoom.git#~0.2.1",
+    "qtip2": "~2.2.1"
   },
   "resolutions": {
     "angular": "~1.3.15"
