--- a/geography/bower.json
+++ b/geography/bower.json
@@ -8,7 +8,7 @@
     "angular-animate": "~1.3.15",
     "angular-xeditable": "~0.1.9",
     "chroma-js": "~0.6.1",
-    "kartograph.js": "~0.8.2",
+    "kartograph.js": "git@github.com:adaptive-learning/kartograph.js.git",
     "angular-google-experiments": "~0.0.1",
     "bootstrap": "~3.3.4",
     "raphael": "~2.1.4",
