--- a/geography/bower.json
+++ b/geography/bower.json
@@ -12,7 +12,7 @@
     "angular-google-experiments": "~0.0.1",
     "bootstrap": "~3.3.4",
     "raphael": "~2.1.4",
-    "raphael-pan-zoom": "git@github.com:escobar5/raphael-pan-zoom.git#~0.2.1",
+    "raphael-pan-zoom": "git@github.com:adaptive-learning/raphael-pan-zoom.git",
     "qtip2": "~2.2.1"
   },
   "resolutions": {
