--- a/geography/package.json
+++ b/geography/package.json
@@ -15,7 +15,8 @@
     "node-raphael": "~0.2.0",
     "grunt-contrib-copy": "~0.8.0",
     "sass": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "bower": "~1.4.1"
   },
   "license": "MIT"
 }
