--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -3,7 +3,9 @@ default:
         predictive_model:
             class: proso.models.prediction.PriorCurrentPredictiveModel
         option_selector:
-            class: proso.models.option_selection.RandomOptionSelection
+            class: proso.models.option_selection.ConfusingOptionSelection
+            parameters:
+                allow_zero_options_restriction: true
     proso_flashcards:
         practice:       
             common:
