--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -21,4 +21,6 @@ default:
                 fc_queue_size_min: 3
                 save_answer_immediately: true
                 cache_context: true
-
+    proso_feedback:
+        domain: slepemapy.cz
+        to: [slepemapy@googlegroups.com]
