--- a/geography/bower.json
+++ b/geography/bower.json
@@ -14,7 +14,8 @@
     "raphael": "~2.1.4",
     "raphael-pan-zoom": "git@github.com:adaptive-learning/raphael-pan-zoom.git",
     "qtip2": "~2.2.1",
-    "angular-django-csrf": "~1.0.0"
+    "angular-django-csrf": "~1.0.0",
+    "angular-gettext": "~2.1.0"
   },
   "resolutions": {
     "angular": "~1.3.15"
