start using random tests

--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -1,5 +1,7 @@
 default:
     proso_models:
+        random_test:
+            nth: 10
         predictive_model:
             class: proso.models.prediction.PriorCurrentPredictiveModel
         option_selector:
