Set up difficulty rating modal

--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -20,3 +20,4 @@ default:
     proso_feedback:
         domain: slepemapy.cz
         to: [slepemapy@googlegroups.com]
+        evaluation_checkpoints: [30, 70, 120, 200]
