--- a/geography/package.json
+++ b/geography/package.json
@@ -5,6 +5,7 @@
     "dom-js": "0.0.9",
     "grunt": "~0.4.5",
     "grunt-bower-concat": "~0.5.0",
+    "grunt-cli": "~0.1.13",
     "grunt-contrib-concat": "~0.5.1",
     "grunt-contrib-jshint": "~0.11.2",
     "grunt-contrib-sass": "~0.9.2",
