adopt a new way to construct options

--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -5,7 +5,9 @@ default:
         predictive_model:
             class: proso.models.prediction.PriorCurrentPredictiveModel
         option_selector:
-            class: proso.models.option_selection.CompetitiveOptionSelection
+            class: proso.models.option_selection.AdjustedOptionSelection
+        options_number:
+            class: AdjustedOptionsNumber
             parameters:
                 allow_zero_options_restriction: true
     proso_flashcards:
