--- a/geography/bower.json
+++ b/geography/bower.json
@@ -15,7 +15,8 @@
     "raphael-pan-zoom": "https://github.com/adaptive-learning/raphael-pan-zoom.git",
     "qtip2": "~2.2.1",
     "angular-django-csrf": "~1.0.0",
-    "angular-gettext": "~2.1.0"
+    "angular-gettext": "~2.1.0",
+    "angular-location-update": "^0.0.2"
   },
   "resolutions": {
     "angular": "~1.3.15"
