--- a/geography/bower.json
+++ b/geography/bower.json
@@ -16,7 +16,8 @@
     "qtip2": "~2.2.1",
     "angular-django-csrf": "~1.0.0",
     "angular-gettext": "~2.1.0",
-    "angular-location-update": "^0.0.2"
+    "angular-location-update": "^0.0.2",
+    "canvg": "^1.3.0"
   },
   "resolutions": {
     "angular": "~1.3.15"
