--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 dj-database-url==0.3.0
+django-filebrowser==3.7.1
+django-grappelli==2.8.1
 proso-apps==3.0.0
 python-memcached==1.57
 transifex-client==0.11
-django-filebrowser==3.7.1
