--- a/geography/bower.json
+++ b/geography/bower.json
@@ -17,7 +17,8 @@
     "angular-django-csrf": "~1.0.0",
     "angular-gettext": "~2.1.0",
     "angular-location-update": "^0.0.2",
-    "canvg": "^1.3.0"
+    "canvg": "^1.3.0",
+    "jquery": "~2.2.3"
   },
   "resolutions": {
     "angular": "~1.3.15"
