--- a/geography/proso_config.yaml
+++ b/geography/proso_config.yaml
@@ -1,4 +1,7 @@
 default:
+    proso_common:
+        config:
+          is_custom_config_allowed: true
     proso_models:
         random_test:
             nth: 10
@@ -18,7 +21,9 @@ default:
                 save_answer_immediately: false
                 cache_context: false
                 queue_length: 10
+        item_selector:
+            parameters:
+                target_probability: 0.65
     proso_feedback:
         domain: slepemapy.cz
         to: [slepemapy@googlegroups.com]
-        evaluation_checkpoints: [30, 70, 120, 200]
